--- a/clock/index.html
+++ b/clock/index.html
@@ -101,7 +101,7 @@ text-shadow:1px 1px 2px rgb(0, 0,0,.7);
  </style>
 </head>
 <body>
-    <h2>The Anlogue V1</h2>
+    <h2 style="background-color: black;">The Anlogue V1</h2>
     <div class="clock">
        <div class="numbers">
           <div class="twelve">12</div>
