--- a/clock/index.html
+++ b/clock/index.html
@@ -8,7 +8,7 @@
     body{
     margin:0;
     padding:0;
-    background-color: saddlebrown;
+    background-color: palevioletred;
     height: 100vh;
     font-family: Arial, Helvetica, sans-serif;
     justify-content: center;
@@ -101,7 +101,6 @@ text-shadow:1px 1px 2px rgb(0, 0,0,.7);
  </style>
 </head>
 <body>
-    <h2 style="background-color: black;">The Anlogue V1</h2>
     <div class="clock">
        <div class="numbers">
           <div class="twelve">12</div>
