--- a/clock/index.html
+++ b/clock/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Analogue-Clock</title>
  <style>
     body{
     margin:0;
@@ -115,7 +115,7 @@ text-shadow:1px 1px 2px rgb(0, 0,0,.7);
        </div>
        <img src="svenfriday.jpg" alt="sevenfriday">
     </div>
-    
+    <h2 style="background-color: azure;text-align:center;">Analogue Clock</h2>
     <script src="index.js"></script>
 </body>
 </html>
